Done the footer.

--- a/index.htm
+++ b/index.htm
@@ -53,17 +53,20 @@
 
         <div class="footer-bottom">
             
-            <div class="footer-bottom-left">
+            <div class="footer-bottom-left footer-bottom-el">
                 <a href="#">Werbeprogramme</a>
                 <a href="#">Unternehmen</a>
                 <a href="#">Wie funktioniert die Google Suche?</a>
             </div>
 
-            <div class="footer-bottom-center">
-                <a href="#">CO2-neutral seit 2007</a>
+            <div class="footer-bottom-center footer-bottom-el">
+                <a href="#">
+                    <img src="assets/leaf.png" alt="a leaf icon" class="leaf-icon">
+                    CO2-neutral seit 2007
+                </a>
             </div>
 
-            <div class="footer-bottom-right">
+            <div class="footer-bottom-right footer-bottom-el">
                 <a href="#">Datenschutzerklärung</a>
                 <a href="#">Nutzungsbedingungen</a>
                 <a href="#">Einstellungen</a>
