Header right side: styled links and added login button

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
         <div class="header-right">
             <a href="#">Gmail</a>
             <a href="#">Bilder</a>            
-            <a href="#">Anmelden</a>            
+            <a href="#" class="sign-in-button">Anmelden</a>            
         </div>
 
     </header>
