Improved vertical spacing of the Google logo

--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,8 @@
 
     <div class="main">
 
+        <div class="spacer"></div>
+
         <img class="logo-img" src="assets/logo.png">
 
         <div class="search-bar">
